crates/opca-core/tests/snapshots/audit_report__snapshot_confirmed_report.snap
---
source: crates/opca-core/tests/audit_report.rs
expression: report
---
{
  "task_id": "task-confirmed-001",
  "verdict": "confirmed",
  "confidence": 0.95,
  "findings": [],
  "summary": "All checks passed, diff is clean",
  "justification": "Decision tree rule 4: only info/minor findings, confidence ≥ 0.5."
}
