crates/opca-core/tests/snapshots/audit_report__snapshot_decision_accept.snap
---
source: crates/opca-core/tests/audit_report.rs
expression: decision
---
{
  "report": {
    "task_id": "task-decision-accept",
    "verdict": "confirmed",
    "confidence": 0.9,
    "findings": [],
    "summary": "Clean",
    "justification": ""
  }
}
