crates/opca-core/tests/snapshots/audit_report__snapshot_decision_override.snap
---
source: crates/opca-core/tests/audit_report.rs
expression: decision
---
{
  "report": {
    "task_id": "task-decision-override",
    "verdict": "needs_fix",
    "confidence": 0.3,
    "findings": [
      {
        "severity": "blocking",
        "location": "tests/integration.rs:100",
        "issue": "3 tests failed"
      }
    ],
    "summary": "Tests are failing",
    "justification": ""
  },
  "override_verdict": "confirmed",
  "override_reason": "tests were pre-existing failures, not caused by this task"
}
