crates/opca-core/tests/snapshots/audit_report__snapshot_false_positive_report.snap
---
source: crates/opca-core/tests/audit_report.rs
expression: report
---
{
  "task_id": "task-false-positive-002",
  "verdict": "false_positive",
  "confidence": 0.7,
  "findings": [
    {
      "severity": "warning",
      "location": "src/auth.rs:42",
      "issue": "Missing null check on user input"
    }
  ],
  "summary": "Minor issue found in auth module",
  "justification": "Diff does not contain the claimed auth refactor."
}
