crates/opca-core/tests/snapshots/audit_report__snapshot_needs_fix_report.snap
---
source: crates/opca-core/tests/audit_report.rs
expression: report
---
{
  "task_id": "task-needs-fix-003",
  "verdict": "needs_fix",
  "confidence": 0.2,
  "findings": [
    {
      "severity": "blocking",
      "location": "src/crypto.rs:10",
      "issue": "Hardcoded secret key in source"
    },
    {
      "severity": "warning",
      "location": "src/crypto.rs:25",
      "issue": "Weak hash algorithm (MD5)"
    }
  ],
  "summary": "Critical security vulnerabilities detected"
}
