crates/opca-core/tests/snapshots/audit_report__snapshot_needs_human_review_report.snap
---
source: crates/opca-core/tests/audit_report.rs
expression: report
---
{
  "task_id": "task-needs-human-review-004",
  "verdict": "needs_human_review",
  "confidence": 0.4,
  "findings": [
    {
      "severity": "info",
      "location": "src/legacy.rs:100",
      "issue": "Ambiguous refactor, cannot verify correctness"
    }
  ],
  "summary": "Cannot determine correctness automatically",
  "justification": "Refactor is too ambiguous to verify automatically; escalating."
}
