crates/opca-core/tests/snapshots/audit_report__snapshot_pass_report.snap
---
source: crates/opca-core/tests/audit_report.rs
assertion_line: 17
expression: report
---
{
  "task_id": "task-pass-001",
  "verdict": "pass",
  "confidence": 0.95,
  "findings": [],
  "summary": "All checks passed, diff is clean"
}
