crates/opca-core/tests/snapshots/audit_report__snapshot_warn_report.snap
---
source: crates/opca-core/tests/audit_report.rs
assertion_line: 33
expression: report
---
{
  "task_id": "task-warn-002",
  "verdict": "warn",
  "confidence": 0.7,
  "findings": [
    {
      "severity": "warning",
      "location": "src/auth.rs:42",
      "issue": "Missing null check on user input"
    }
  ],
  "summary": "Minor issue found in auth module"
}
